force-app/main/default/objects/Partner_Subscription__c/Partner_Subscription__c.object-meta.xml
<CustomObject>
    <description>Created for the Pax8 Billing process.</description>
    <label>Partner Subscription</label>
    <nameField>
        <displayFormat>PSID-{000000000}</displayFormat>
        <label>Partner Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>