force-app/main/default/objects/Partner_Subscription__c/fields/Additional_Users__c.field-meta.xml
<CustomField>
    <fullName>Additional_Users__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional Users</label>
    <type>Checkbox</type>
</CustomField>