force-app/main/default/objects/Partner_Subscription__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Partner Subscriptions</relationshipLabel>
    <relationshipName>Partner_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>