force-app/main/default/objects/Partner_Subscription__c/fields/Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule__c</fullName>
    <description>Created for the pax8/SF/NS integration.</description>
    <label>Billing Schedule</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Billing_Schedule</valueSetName>
    </valueSet>
</CustomField>