force-app/main/default/objects/Partner_Subscription__c/fields/Canceled_Date__c.field-meta.xml
<CustomField>
    <fullName>Canceled_Date__c</fullName>
    <description>Created for the Pax8/SF integration.</description>
    <label>Canceled Date</label>
    <type>Date</type>
</CustomField>