force-app/main/default/objects/Partner_Subscription__c/fields/Do_Not_Bill__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Bill__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for the pax8/SF/NS integration.</description>
    <label>Do Not Bill</label>
    <type>Checkbox</type>
</CustomField>