force-app/main/default/objects/Partner_Subscription__c/fields/Included_in_Package__c.field-meta.xml
<CustomField>
    <fullName>Included_in_Package__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created for PS billing.</description>
    <label>Included in Package</label>
    <type>Checkbox</type>
</CustomField>