force-app/main/default/objects/Partner_Subscription__c/fields/Invoice_Date__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Date__c</fullName>
    <description>Created for the pax8/SF/NS integration.</description>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>