force-app/main/default/objects/Partner_Subscription__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Partner Subscriptions</relationshipLabel>
    <relationshipName>Partner_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>