force-app/main/default/objects/Partner_Subscription__c/fields/Order_Product__c.field-meta.xml
<CustomField>
    <fullName>Order_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Partner Subscriptions</relationshipLabel>
    <relationshipName>Partner_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>