force-app/main/default/objects/Partner_Subscription__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Created for the pax8/SF/NS integration.</description>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Partner Subscriptions</relationshipLabel>
    <relationshipName>Partner_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>