force-app/main/default/objects/Partner_Subscription__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>Partner Subscriptions</relationshipLabel>
    <relationshipName>Partner_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>