force-app/main/default/objects/Partner_Subscription__c/fields/Recurring_Total__c.field-meta.xml
<CustomField>
    <fullName>Recurring_Total__c</fullName>
    <description>Created for the pax8/SF/NS integration.</description>
    <label>Customer Total Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>