force-app/main/default/objects/Partner_Subscription__c/fields/Source_Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Transaction_Type__c</fullName>
    <label>Source Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Source_Transaction_Type</valueSetName>
    </valueSet>
</CustomField>