force-app/main/default/objects/Partner_Subscription__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>IF(ISPICKVAL(Billing_Frequency__c, &quot;Annual&quot;), Price__c * Quantity__c * 12, Price__c * Quantity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>