force-app/main/default/objects/Partner_Subscription__c/fields/Vendor_Cost__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Cost__c</fullName>
    <description>Created for the Pax8/SF integration.</description>
    <label>Vendor Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>